# LR6

task1/: CMakeLists.txt  task_1  task_1.cpp
task1/tests/: test  test1.cpp
task2/: CMakeLists.txt  Task_2  Task_2.cpp
task2/tests/: test  test.cpp
task3/: CMakeLists.txt  task_3  task_3.cpp
task3/tests/: test  test.cpp
